--- a/src/resources/views/me/stored-courses.hbs
+++ b/src/resources/views/me/stored-courses.hbs
@@ -1,21 +1,61 @@
-<div class="mt-4">
+<form name="container-form" method="post" class="mt-4" action="/courses/handle-form-actions">
   <div>
     <h3>Khóa học của tôi</h3>
     <a href="/me/trash/courses">Thùng rác ({{deletedCount}})</a>
+
+    <div class="mt-4 d-flex align-items-center">
+      <div class="form-check">
+        <input
+          class="form-check-input"
+          type="checkbox"
+          value=""
+          id="checkbox-all"
+        />
+        <label class="form-check-label" for="checkbox-all">
+          Chọn tất cả
+        </label>
+      </div>
+
+      <select class="form-select form-control-sm checkbox-select-all-options" name="action" required>
+        <option value="">--Chọn hành động--</option>
+        <option value="delete">xóa</option>
+      </select>
+
+      <button class="btn btn-primary btn-sm check-all-submit-btn" disabled="disabled">Thực hiện</button>
+    </div>
   </div>
 
   <table class="table mt-4">
     <thead>
       <tr>
-        <th scope="col">#</th>
-        <th scope="col">Tên khóa học</th>
-        <th scope="col">Trình độ</th>
-        <th scope="col" colspan="2">Thời gian tạo</th>
+        <th scope="col" colspan="2">#</th>
+        <th scope="col" class="d-flex align-items-center">
+          Tên khóa học 
+          {{{sortable 'name' _sort}}}
+        </th>
+        <th scope="col">
+          Trình độ
+          {{{sortable 'level' _sort}}}
+        </th>
+        <th scope="col" colspan="2">
+          Thời gian tạo
+          {{{sortable 'createdAt' _sort}}}
+        </th>
       </tr>
     </thead>
     <tbody>
       {{#each courses}}
         <tr>
+          <td>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                name="courseIds[]"
+                value="{{this._id}}"
+              />
+            </div>
+          </td>
           <th scope="row">{{sum @index 1}}</th>
           <td>{{this.name}}</td>
           <td>{{this.level}}</td>
@@ -41,7 +81,7 @@
       {{/each}}
     </tbody>
   </table>
-</div>
+</form>
 
 {{! Confirm delete course }}
 <div id="delete-course-modal" class="modal" tabindex="-1" role="dialog">
@@ -79,12 +119,18 @@
 
 <script>
     document.addEventListener('DOMContentLoaded', function() {
-        var courseId;
-        var deleteForm = document.forms['delete-course-form'];
-        var btnDeleteCourse = document.getElementById('btn-delete-course');
+        let courseId;
+        let deleteForm = document.forms['delete-course-form'];
+        // let containerFrom = document.forms['container-form'];
+        let containerFrom = $('form[name="container-form"]');
+        let btnDeleteCourse = document.getElementById('btn-delete-course');
+        let checkboxAll = $("#checkbox-all");
+        let courseItemcheckbox = $('input[name="courseIds[]"]');
+        let checkAllSubmitBtn = $(".check-all-submit-btn");       
+
         // When dialog confirm clicked
         $('#delete-course-modal').on('show.bs.modal', function (event) {
-            var button = $(event.relatedTarget);
+            let button = $(event.relatedTarget);
             courseId = button.data('id');
         });
         
@@ -92,6 +138,30 @@
         btnDeleteCourse.onclick = function () {
             deleteForm.action = '/courses/' + courseId + '?_method=DELETE';
             deleteForm.submit();
+        }
+
+        // checkbox all clicked
+        checkboxAll.change(function () {
+          let isCheckedAll = $(this).prop('checked');
+          courseItemcheckbox.prop('checked', isCheckedAll);
+          renderCheckAllSubmitBtn();
+        })
+
+        // course item checkbox changed
+        courseItemcheckbox.change(function () {
+          let isCheckedAll = courseItemcheckbox.length === $('input[name="courseIds[]"]:checked').length;
+          checkboxAll.prop('checked', isCheckedAll);
+          renderCheckAllSubmitBtn();
+        })
+
+        // re-render check all submit button
+        function renderCheckAllSubmitBtn() {
+          var checkedCount = $('input[name="courseIds[]"]:checked').length;
+          if (checkedCount > 0) {
+            checkAllSubmitBtn.attr('disabled', false);
+          } else {
+            checkAllSubmitBtn.attr('disabled', true);
+          }
         }
     });
 </script>
